sorted/tests/14-pattern-ident-without-ref-and-subpattern.rs
#[allow(unreachable_patterns)]
#[sorted::check]
fn main() {
    let x = 10;

    #[sorted]
    match x {
        def => println!("{def}"),
        abc => println!("{abc}"),
    }
}
